--- a/foundations/intro-to-css/01-css-methods/index.html
+++ b/foundations/intro-to-css/01-css-methods/index.html
@@ -4,11 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <style>
+      p {
+        color: aliceblue;
+        background: darkgreen;
+      }
+    </style>
     <title>Methods for Adding CSS</title>
+
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <div>Style me via the external method!</div>
+    <div id="external">Style me via the external method!</div>
     <p>I would like to be styled with the internal method, please.</p>
-    <button>Inline Method</button>
+    <button style="color: black; background-color: darksalmon;">Inline Method</button>
   </body>
 </html>
