--- a/foundations/intro-to-css/01-css-methods/index.html
+++ b/foundations/intro-to-css/01-css-methods/index.html
@@ -6,18 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <style>
+
       p {
         color: aliceblue;
         background: darkgreen;
+
+        font-size: 25px;
       }
+
     </style>
     <title>Methods for Adding CSS</title>
 
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
+
     <div id="external">Style me via the external method!</div>
     <p>I would like to be styled with the internal method, please.</p>
-    <button style="color: black; background-color: darksalmon;">Inline Method</button>
+    <button style="background-color: darksalmon; font-size: 25px">Inline Method</button>
+
   </body>
 </html>
