exc2. nao estava conseguindo deixar a lista na horizontal, mas achei uma solucao.

--- a/foundations/flex/02-flex-header/index.html
+++ b/foundations/flex/02-flex-header/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,7 +11,7 @@
     <div class="header">
       <div class="left-links">
         <ul>
-          <li><a href="#">ONE</a></li>
+          <li class="one"><a href="#">ONE</a></li>
           <li><a href="#">TWO</a></li>
           <li><a href="#">THREE</a></li>
         </ul>
