--- a/foundations/flex/03-flex-header-2/index.html
+++ b/foundations/flex/03-flex-header-2/index.html
@@ -9,15 +9,16 @@
   </head>
   <body>
     <div class="header">
-      <div class="logo">
-        LOGO
+      <div class="parte_esquerda">
+        <div class="logo">
+          LOGO
+        </div>
+        <ul class="links">
+          <li><a href="https://google.com">link-one</a></li>
+          <li><a href="https://google.com">link-two</a></li>
+          <li><a href="https://google.com">link-three</a></li>
+        </ul>
       </div>
-      <ul class="links">
-        <li><a href="https://google.com">link-one</a></li>
-        <li><a href="https://google.com">link-two</a></li>
-        <li><a href="https://google.com">link-three</a></li>
-      </ul>
-
       <div class="parte-direita">
       <button class="notifications">
         1 new notification
