--- a/foundations/flex/04-flex-information/index.html
+++ b/foundations/flex/04-flex-information/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,17 +10,49 @@
 <body>
 <div class="title">Information!</div>
 
-<img src="./images/barberry.png" alt="barberry">
-<div class="text">This is a type of plant. We love this one.</div>
+<div class="container-geral">
 
-<img src="./images/chilli.png" alt="chili">
-<div class="text">This is another type of plant. Isn't it nice?</div>
+  <div class="imagens-geral">
 
-<img src="./images/pepper.png" alt="pepper">
-<div class="text">We have so many plants. Yay plants.</div>
+    <div class="img1">
+      <img src="./images/barberry.png" alt="barberry">
+    </div>
 
-<img src="./images/saffron.png" alt="saffron">
-<div class="text">I'm running out of things to say about plants.</div>
+    <div class="img2">
+      <img src="./images/chilli.png" alt="chili">
+    </div>
+
+    <div class="img3">
+      <img src="./images/pepper.png" alt="pepper">
+    </div>
+
+    <div class="img4">
+      <img src="./images/saffron.png" alt="saffron">
+    </div>
+
+  </div>
+
+  <div class="textos-geral">
+
+    <div class="text1">
+      This is a type of plant. We love this one.
+    </div>>
+
+    <div class="text2">
+      This is another type of plant. Isn't it nice?
+    </div>
+
+    <div class="text3">
+      We have so many plants. Yay plants.
+    </div>
+
+    <div class="text4">
+      I'm running out of things to say about plants.
+    </div>
+
+  </div>
+
+</div>
 
 <!-- disregard this section, it's here to give attribution to the creator of these icons -->
 <div class="footer">
