--- a/foundations/flex/04-flex-information/index.html
+++ b/foundations/flex/04-flex-information/index.html
@@ -10,46 +10,29 @@
 <body>
 <div class="title">Information!</div>
 
-<div class="container-geral">
+<div class="todas-plantas">
 
-  <div class="imagens-geral">
-
-    <div class="img1">
+    <div class="planta">
       <img src="./images/barberry.png" alt="barberry">
+      <div class="text">This is a type of plant. We love this one.</div>
     </div>
 
-    <div class="img2">
+    <div class="planta">
       <img src="./images/chilli.png" alt="chili">
+      <div class="text">This is another type of plant. Isn't it nice?</div>
     </div>
 
-    <div class="img3">
+    <div class="planta">
       <img src="./images/pepper.png" alt="pepper">
+      <div class="text">We have so many plants. Yay plants.</div>
     </div>
 
-    <div class="img4">
+    <div class="planta">
       <img src="./images/saffron.png" alt="saffron">
+      <div class="text">I'm running out of things to say about plants.</div>
     </div>
-
-  </div>
 
   <div class="textos-geral">
-
-    <div class="text1">
-      This is a type of plant. We love this one.
-    </div>>
-
-    <div class="text2">
-      This is another type of plant. Isn't it nice?
-    </div>
-
-    <div class="text3">
-      We have so many plants. Yay plants.
-    </div>
-
-    <div class="text4">
-      I'm running out of things to say about plants.
-    </div>
-
   </div>
 
 </div>
