--- a/foundations/flex/06-flex-layout/index.html
+++ b/foundations/flex/06-flex-layout/index.html
@@ -24,8 +24,8 @@
     <input type="text">
   </div>
   <div class="buttons">
-    <button>Do the thing!</button>
-    <button>Do the other thing!</button>
+    <button id="one">Do the thing!</button>
+    <button id="two">Do the other thing!</button>
   </div>
 </div>
 <div class="footer">
