--- a/foundations/flex/06-flex-layout/index.html
+++ b/foundations/flex/06-flex-layout/index.html
@@ -19,13 +19,13 @@
   </ul>
 </div>
 <div class="content">
-  <img id="logo" src="./logo.png" alt="Project logo. Represents odin with the project name.">
+  <img src="./logo.png" alt="Project logo. Represents odin with the project name.">
   <div class="input">
     <input type="text">
   </div>
   <div class="buttons">
-    <button id="one">Do the thing!</button>
-    <button id="two">Do the other thing!</button>
+    <button>Do the thing!</button>
+    <button>Do the other thing!</button>
   </div>
 </div>
 <div class="footer">
